src/objects/BatchData__c.object
<CustomObject>
    <description>Object for pre-processing data for batch</description>
    <fields>
        <fullName>DEL_Account_Reference__c</fullName>
        <formula>T_CaseId__r.C_Account_Reference__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Reference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>Unique Id for upsert</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>250</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ObjectName__c</fullName>
        <description>Name of the Object related to the Object Id</description>
        <label>Object Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>EmailMessage</fullName>
                </value>
                <value>
                    <fullName>Attachment</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ObjectStatus__c</fullName>
        <label>Object Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Id__c</fullName>
        <label>Object Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Id__c</fullName>
        <description>Parent Id of related object.

Example Parent Id for Attachement of  Email Messages  is Email Messages</description>
        <label>Parent Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProcessOrder__c</fullName>
        <formula>IF(  
  ISPICKVAL( ObjectName__c , &quot;Case&quot;) &amp;&amp; ObjectStatus__c = &quot;Escalated&quot;,0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Process Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Process__c</fullName>
        <description>Type of process running in batch</description>
        <label>Process</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CRM2 Emal Integration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>T_CaseId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Batch Datas</relationshipLabel>
        <relationshipName>BatchDatas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>T_DescriptionHistory__c</fullName>
        <description>Time base Description 
For Example for Case it is Case Number + Case Owner(First Name, Last Name) + Case Status + Case Object + Case Description</description>
        <label>Description History</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>T_ExecutingTime__c</fullName>
        <description>Date time field which trigger time period when this record should be taken in consideration</description>
        <label>Executing Time</label>
        <type>DateTime</type>
    </fields>
    <label>Batch Data</label>
    <listViews>
        <fullName>All</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>DEL_Account_Reference__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>T_ExecutingTime__c</columns>
        <columns>NAME</columns>
        <columns>T_CaseId__c</columns>
        <columns>Object_Id__c</columns>
        <columns>ObjectStatus__c</columns>
        <columns>ProcessOrder__c</columns>
        <columns>Process__c</columns>
        <columns>External_Id__c</columns>
        <columns>ObjectName__c</columns>
        <columns>T_DescriptionHistory__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>T_CaseId__c</field>
            <operation>equals</operation>
            <value>00009318</value>
        </filters>
        <filters>
            <field>T_CaseId__c</field>
            <operation>equals</operation>
            <value>00009328</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CRM2_Bad_Data</fullName>
        <columns>T_ExecutingTime__c</columns>
        <columns>NAME</columns>
        <columns>T_CaseId__c</columns>
        <columns>Object_Id__c</columns>
        <columns>DEL_Account_Reference__c</columns>
        <columns>ObjectName__c</columns>
        <columns>T_DescriptionHistory__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>T_ExecutingTime__c</field>
            <operation>greaterThan</operation>
            <value>12/14/2017 12:00 PM</value>
        </filters>
        <filters>
            <field>DEL_Account_Reference__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>T_ExecutingTime__c</field>
            <operation>lessThan</operation>
            <value>12/14/2017 1:40 PM</value>
        </filters>
        <label>CRM2 - Bad Data</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>BD-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Datas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>